eslint cleanup and prepping to scrub some history

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -13,7 +13,6 @@
   },
 
   "env": {
-    // I write for browser
     "browser": true,
     "es6": true
   },
@@ -42,7 +41,11 @@
     "arrow-body-style": "off",
     "newline-before-return": "off",
     "id-length": ["error", {"exceptions": ["_"]}],
-    "newline-per-chained-call": "off"
+    "newline-per-chained-call": "off",
+    "sort-keys": "off",
+    "capitalized-comments": "off",
+    "line-comment-position": "off",
+    "max-statements": ["error", 15]
   },
 
   "root": true
